# wproject

./: .env.dist  Dockerfile  README-RU.md  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1683a9518a63_initial.py  53f48a4233d7_fix_timezones_aware.py  7a1fd0239c68_fix_int32_ids.py  c2082ef8fbce_users.py  ca6c53a43b75_instructions.py
app/: __main__.py  _const.py  ioc.py
app/bot/: setup.py
app/bot/content/: text.py
app/bot/handlers/: __init__.py  commands.py  conversation.py
app/bot/handlers/commands/: chat_status.py  clean.py  context.py  instructions.py  roles.py  start.py
app/bot/middlewares/: __init__.py  updates.py
app/bot/utils/: __init__.py  role_provider.py  states.py
app/bot/utils/roles/: __init__.py  role_manager.py  role_provider.py  roles.py
app/core/: __init__.py  loggers.py  settings.py
app/database/: __init__.py  database.py  migrations.py  repo.py  service.py
app/enums/: context.py  roles.py
app/services/: completion.py  summary.py
app/services/context/: __init__.py  service.py
app/services/context/storage/: __init__.py  base.py  protocol.py  redis.py
app/services/instructions/: __init__.py  model.py  repo.py  schemas.py  service.py
app/services/users/: __init__.py  model.py  repo.py  schemas.py  service.py
app/types/: context.py
app/utils/: encode.py  format.py  key_builder.py
