[project]
name = "wproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.23.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "dishka>=1.7.2",
    "openrouter>=0.1.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "raito>=1.3.7",
    "redis>=7.1.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "structlog>=25.5.0",
    "tiktoken>=0.12.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "isort>=7.0.0",
    "pyright>=1.1.407",
    "ruff>=0.14.8",
]
